Fix gaps for social media buttons

--- a/src/app/links-grid/links-grid.component.scss
+++ b/src/app/links-grid/links-grid.component.scss
@@ -1,6 +1,5 @@
 .links-grid {
     background-color: #ffb3b3;
-    width: 100%;
     padding: 2%;
     display: flex;
     flex-flow: row wrap;
